✨ feat: Note 11 & fix: Typo

--- a/Note/03机器学习介绍与线性模型.md
+++ b/Note/03机器学习介绍与线性模型.md
@@ -19,13 +19,13 @@ $(w, b)$ 是要学习的模型参数.
 也就是要：
 
 $$
-f^{*} = arg \min_f \mathbb{E} [ ( f ( X )-Y )^{2} ]
+f^{*} = \arg \min_f \mathbb{E} [ ( f ( X )-Y )^{2} ]
 $$
 
 由于我们不能无限地获得数据，所以我们只能通过有限的数据来估计这个期望，也就是：
 
 $$
-f^{*}= arg \min_f \frac{1}{N} \sum_{i=1}^{N} ( f ( x_i )-y_i )^{2}
+f^{*}= \arg \min_f \frac{1}{N} \sum_{i=1}^{N} ( f ( x_i )-y_i )^{2}
 $$
 
 这也被称为 Empirical mean（经验均值）。
@@ -35,7 +35,7 @@ $$
 根据大数定理，当数据量足够大时，经验均值会趋近于期望，也就是：
 
 $$
-\frac{1} {n} \sum_{i=1}^{n} loss ( x_{i}, y_{i} ) \overset{n \to\infty} {\longrightarrow} \mathbb{E}_{X, Y} [ loss ( X, Y ) ]
+\frac{1}{n} \sum_{i=1}^{n} loss ( x_{i}, y_{i} ) \overset{n \to\infty} {\longrightarrow} \mathbb{E}_{X, Y} [ loss ( X, Y ) ]
 $$
 
 我们可以通过最小二乘法来获取最优的 $w$ 和 $b$。
@@ -43,7 +43,10 @@ $$
 我们选择以线性代数来表示这个问题，也就是 Least Squares Estimator（最小二乘估计）：
 
 $$
-\begin{array} {r c l} {{( w^{*}, b^{*} ) \! \!}} & {{\!=\! \!}} & {{\! \! \! \arg \min \sum_{i=1}^{n} \, ( f ( x_{i} )-y_{i} )^{2}}} \\ {{\! \!}} & {{\!=\! \!}} & {{\! \! \! \! \arg \min \sum_{i=1}^{n} \, ( y_{i}-w x_{i}-b )^{2}}} \end{array}
+\begin{aligned}
+(w^{*}, b^{*}) &= \arg \min \sum_{i=1}^{n} ( f ( x_{i} )-y_{i} )^{2} \\
+&= \arg \min \sum_{i=1}^{n} ( y_{i}-w x_{i}-b )^{2}
+\end{aligned}
 $$
 
 我们将之转为矩阵形式：
@@ -62,8 +65,8 @@ $$
 
 $$
 \begin{aligned}
-\hat{\beta} &= \mathop{arg}\min_{\beta} \frac{1} {n} \sum_{i=1}^{n} \; ( X_{i} \beta-Y_{i} )^{2} \\
-&= \mathop{arg}\min_{\beta} \frac{1} {n} ( \mathbf{A} \beta-\mathbf{Y} )^{\mathrm{T}} ( \mathbf{A} \beta-\mathbf{Y} )
+\hat{\beta} &= \arg\min_{\beta} \frac{1} {n} \sum_{i=1}^{n} ( X_{i} \beta-Y_{i} )^{2} \\
+&= \arg\min_{\beta} \frac{1} {n} ( \mathbf{A} \beta-\mathbf{Y} )^{\mathrm{T}} ( \mathbf{A} \beta-\mathbf{Y} )
 \end{aligned}
 $$
 
@@ -74,10 +77,13 @@ $$
 $$
 \begin{aligned}
 J(\beta) &= ( \mathbf{A} \beta-\mathbf{Y} )^{\mathrm{T}} ( \mathbf{A} \beta-\mathbf{Y} ) \\
+&= \beta^{\mathrm{T}} \mathbf{A}^{\mathrm{T}} \mathbf{A} \beta- \beta^{\mathrm{T}} \mathbf{A}^{\mathrm{T}} \mathbf{Y}- \mathbf{Y}^{\mathrm{T}} \mathbf{A} \beta+ \mathbf{Y}^{\mathrm{T}} \mathbf{Y}\\
 &= \beta^{\mathrm{T}} \mathbf{A}^{\mathrm{T}} \mathbf{A} \beta-2 \beta^{\mathrm{T}} \mathbf{A}^{\mathrm{T}} \mathbf{Y}+\mathbf{Y}^{\mathrm{T}} \mathbf{Y}\\
 \quad \frac{\partial J(\beta)}{\partial \beta} &= 2 \mathbf{A}^{\mathrm{T}} \mathbf{A} \beta-2 \mathbf{A}^{\mathrm{T}} \mathbf{Y} = 0 \\
 \end{aligned}
 $$
+
+这里第三个等号利用了中间两项互为转置且均为标量的性质合并了他们。第四个等号则应用了矩阵求导的性质。
 
 如果 $\mathbf{A}$ 可逆，那自然可以根据上式求出 $\beta$ 的解：
 
@@ -96,8 +102,10 @@ $$
 ## 贝叶斯统计
 
 $$
-\begin{aligned}&\max_{\beta}p(D|\beta)p(\beta)=\max_{\beta}\log p(D|\beta)+\log p(\beta)\\\\
-&\hat{\beta}_{\mathrm{MAP}}=arg\max_{\beta}\underbrace{\log p\left(\{(X_i,Y_i)\}_{i=1}^n\mid\beta,\sigma^2\right)}_{\log\text{likelihood}} + \underbrace { l o g p \left ( \beta \right )}_{\log\text{prior}} \end{aligned}
+\begin{aligned}
+&\max_{\beta}p(D|\beta)p(\beta)=\max_{\beta}\log p(D|\beta)+\log p(\beta)\\\\
+&\hat{\beta}_{\mathrm{MAP}}=\arg\max_{\beta}\underbrace{\log p\left(\{(X_i,Y_i)\}_{i=1}^n\mid\beta,\sigma^2\right)}_{\log\text{likelihood}} + \underbrace { l o g p \left ( \beta \right )}_{\log\text{prior}}
+\end{aligned}
 $$
 
 第一行的含义是，我们要最大化数据的似然函数和参数的先验概率的乘积。
@@ -131,7 +139,7 @@ $$
 p(\beta) = \frac{1}{(2\pi)^{n/2}|\Sigma|^{1/2}} e^{-\frac{1}{2}(\beta - \mu)^T \Sigma^{-1} (\beta - \mu)}
 $$
 
-> 可以比较一维版本来理解~
+> 可以比较一维版本来理解～
 >
 > 其中的 $| \Sigma |$ 是协方差矩阵的行列式，它的作用是保证概率密度函数的总面积为 1。而当它为对角矩阵时，还能额外保证各个维度彼此独立。
 
@@ -150,10 +158,10 @@ $$
 带入进行复杂的数学推导 [^1] 后，我们就可以得到：
 
 $$
-\hat{\beta}_{\mathbf{MAP}}=arg\min\sum_{i=1}^n(Y_i-X_i\beta)^2+\lambda\parallel\beta\parallel_2^2
+\hat{\beta}_{\mathbf{MAP}}=\arg\min\sum_{i=1}^n(Y_i-X_i\beta)^2+\lambda\parallel\beta\parallel_2^2
 $$
 
-为什么刚才是 $arg \max$，现在又变成了 $arg \min$？简单说明就是，刚才我们要最大化从已知的 $\beta$ 中得到数据真实分布的概率，这就等价于最小化使用我们的模型，从 $X$ 中得到的数据的误差（也即最大似然估计）。
+为什么刚才是 $\arg \max$，现在又变成了 $\arg \min$？简单说明就是，刚才我们要最大化从已知的 $\beta$ 中得到数据真实分布的概率，这就等价于最小化使用我们的模型，从 $X$ 中得到的数据的误差（也即最大似然估计）。
 
 而 $\lambda$ 是一个超参数，它的作用是控制我们对于参数的偏好，也就是我们对于模型的复杂度的偏好。在后续的学习中，我们会知道 $\lambda\parallel\beta\parallel_2^2$ 其实是一个正则项，它的作用是防止过拟合。
 
@@ -167,13 +175,13 @@ $$
 
 对于惩罚项，我们一般有两个选择：
 
--   L1 正则（1-范数）：$\mathrm{pen}(\beta)=\parallel\beta\parallel_1=\sum_{i=1}^n|\beta_i|$
--   L2 正则（2-范数）：$\mathrm{pen}(\beta)=\parallel\beta\parallel_2^2=\sum_{i=1}^n\beta_i^2$​
+-   L1 正则（1 - 范数）：$\mathrm{pen}(\beta)=\parallel\beta\parallel_1=\sum_{i=1}^n|\beta_i|$
+-   L2 正则（2 - 范数）：$\mathrm{pen}(\beta)=\parallel\beta\parallel_2^2=\sum_{i=1}^n\beta_i^2$​
 
 这两个惩罚项的解，具有如下特征：
 
--   **L1 岭回归的正则化项**：$ \lambda \sum\_{j=1}^{p} \beta_j^2 $，这是一个L2范数，它对大的系数施加更大的惩罚，导致系数平滑地趋近于零。有些$w$更小。
--   **L2 套索回归的正则化项**：$ \lambda \sum\_{j=1}^{p} |\beta_j| $，这是一个L1范数，它对所有系数施加相同的惩罚，这会导致一些系数直接为零，从而产生一个稀疏解。非零$w$更少。
+-   **L1 岭回归的正则化项**：$\lambda \sum_{j=1}^{p} \beta_j^2$，这是一个 L2 范数，它对大的系数施加更大的惩罚，导致系数平滑地趋近于零。有些 $w$ 更小。
+-   **L2 套索回归的正则化项**：$\lambda \sum_{j=1}^{p} |\beta_j|$，这是一个 L1 范数，它对所有系数施加相同的惩罚，这会导致一些系数直接为零，从而产生一个稀疏解。非零 $w$ 更少。
 
 最终，我们得到广义的线性模型，我们可以考虑任意一种单调可微的函数 $g(.)$：
 
@@ -185,7 +193,7 @@ $$
 
 ![image-20240307193801046](./03机器学习介绍与线性模型.assets/image-20240307193801046.png)
 
-在这个图中，$g$ 就是 $log$ 函数，而对应的 $g^{-1}$ 就是 $e^x$ 指数函数。通过这个变换，我们将一个线性的 $y'= (w^Tx+b)$ 变换得到了非线性的 $y$。
+在这个图中，$g$ 就是 $\log$ 函数，而对应的 $g^{-1}$ 就是 $e^x$ 指数函数。通过这个变换，我们将一个线性的 $y'= (w^Tx+b)$ 变换得到了非线性的 $y$。
 
 ## Reference
 
@@ -193,7 +201,7 @@ $$
 
 关于最大化高斯分布的后验概率等价于最小化二阶范数的具体推导，还有一个由 GPT4 生成的推导过程：
 
-> 在高斯分布下，假设权重 $w$ 遵循均值为0，方差为 $\sigma^2$ 的正态分布，即 $w \sim \mathcal{N}(0, \sigma^2)$。那么权重的概率密度函数（PDF）为：
+> 在高斯分布下，假设权重 $w$ 遵循均值为 0，方差为 $\sigma^2$ 的正态分布，即 $w \sim \mathcal{N}(0, \sigma^2)$。那么权重的概率密度函数（PDF）为：
 >
 > $$
 > P(w) = \frac{1}{\sqrt{2\pi\sigma^2}}\exp\left(-\frac{w^2}{2\sigma^2}\right)
