--- a/Note/04机器学习中的线性回归与分类问题.md
+++ b/Note/04机器学习中的线性回归与分类问题.md
@@ -100,18 +100,18 @@ $$
 
 接下来，定义一个非常重要的概念：**熵 (Entropy)**。
 
-熵：服从某⼀特定概率分布事件的理论最⼩平均编码长度。
+熵：服从某一特定概率分布事件的理论最⼩平均编码长度。
 
 已知一个离散变量 $i$ 的概率分布 $P(i)$，我们有熵的公式：
 
 $$
-Entropy =-\sum_{n=1}^nP(i)log_2P(i)
+Entropy =-\sum_{n=1}^nP(i)\log_2P(i)
 $$
 
 而对于连续变量，我们有：
 
 $$
-Entropy =-\int P(x)log_2P(x)dx
+Entropy =-\int P(x)\log_2P(x)dx
 $$
 
 我们可以将之统一为：
