--- a/Note/09精选生成对抗网络.md
+++ b/Note/09精选生成对抗网络.md
@@ -33,7 +33,7 @@ $$
 -   $p_{\text{data}}$ 是真实图像数据的分布
 -   $c$ 是输入的条件标签
 -   $p_z$ 是随机噪声的分布
--   $p_c$ 是条件标签的分布
+-   $p_c$ 是条件标签的分布，指的是对于所有可能的标签 $c$，它们在数据集中出现的频率分布
 -   $D_x$ 是判别器对图像真伪的判断
 -   $D_c$ 是判别器对图像类别的判断
 -   $G(z, c)$ 是生成器根据噪声 $z$ 和条件 $c$ 生成的图像
@@ -72,13 +72,15 @@ $$
 
 ![cGAN_arch](09精选生成对抗网络.assets/cGAN_arch.png)
 
-其中，不同颜色的线和注释代表不同的训练步骤。
+其中，不同颜色的线和注释代表不同的训练步骤。1、2 是判别器的任务，3 是生成器的任务。
 
 ## 寻找潜在表示
 
 **寻找潜在表示 (Find Latent Representation)**：传统 GAN 只能从潜在空间 $Z$ 映射到数据空间 $X$，而没有从 $X$ 映射回 $Z$ 的能力。为了解决这个问题，我们可以通过优化方法或者学习一个编码器来找到潜在表示。
 
 ![vae_and_gan](09精选生成对抗网络.assets/vae_and_gan.png)
+
+![vae_and_gan_2](09精选生成对抗网络.assets/vae_and_gan_2.png)
 
 回想我们之前说的，VAE 拥有一个编码器，可以将 $X$ 映射到 $Z$，而 GAN 没有类似的能力。
 
@@ -144,7 +146,7 @@ CoGAN 的目标：
 
 -   让 $G_A$ 和 $G_B$ 生成尽可能真实的数据，以欺骗对应的判别网络 $D_A$ 和 $D_B$。
 -   让 $D_A$ 和 $D_B$ 能够区分真实数据与生成的数据。
--   通过共享权重使得 $G_A$ 和 $G_B$ 生成的数据有相似的特征。
+-   通过 **共享权重** 使得 $G_A$ 和 $G_B$ 生成的数据有相似的特征。
 
 ![CoGAN_arch](09精选生成对抗网络.assets/CoGAN_arch.png)
 
@@ -170,10 +172,18 @@ CycleGAN 的核心思想是：
 
 为了保持图像内容的一致性，CycleGAN 引入了 **循环一致性损失（cycle consistency loss）**，确保图像在经过两次转换（A 到 B，再 B 则 A）后，仍能回到原始状态（能够重构出原始图像）。这样就能够确保在图像风格转换的过程中，图像的内容得到保留。
 
-CycleGAN 的目标：
+### CycleGAN 的目标
 
 -   让 $G_{AB}$ 和 $G_{BA}$ 生成的图像足够真实，以至于可以欺骗判别网络 $D_A$ 和 $D_B$。
 -   让 $D_A$ 和 $D_B$ 能够有效地区分出真实图像和生成图像。
 -   通过 **循环一致性损失**，确保图像在转换过程中保持内容不变。
 
 主要应用：风格迁移、季节转换、照片增强等无配对图像到图像的转换任务。
+
+### Cycle 的缺陷
+
+CycleGAN 的目标是确保图像在经过一系列转换后，仍然能够保留足够的信息，以便可以恢复到原始状态。
+
+但是，CycleGAN 在处理一些任务时存在缺陷，比如在 **改变图像中物体的形状或纹理时**，可能会损失一些信息，导致无法完美复原。例如，如果你尝试去除人头像中的眼睛，CycleGAN 可能就无法做到既去除眼睛又不损失其他重要信息。
+
+CycleGAN、DualGAN、DiscoGAN 和 UNIT 都是基于相似原理的模型，它们都旨在通过学习转换图像的同时保留关键信息，使得图像能够在不同域之间转换。
