--- a/Note/10循环神经网络.md
+++ b/Note/10循环神经网络.md
@@ -14,29 +14,29 @@
 
 -   循环神经网络（RNN）是一种专为处理时间序列数据设计的深度学习架构。
 
-## 前置知识
+## 词的表示
 
 词的表示（Word Representation）：将词转换为计算机可以理解的形式的过程。词的表示有两种主要方法：one-hot 编码和词嵌入（Word Embedding）。
 
-One-hot 编码：
+### One-hot 编码
 
--   将每个词表示为一个向量，向量的维度等于词汇表的大小
--   ⼤词汇量将导致 “维数灾难”
+-   将每个词表示为一个向量，**向量的维度等于词汇表的大小**
+-   大词汇量将导致 “维数灾难”
 -   所有单词表示都是独立的！太稀疏了！
 
 ![one-hot](10循环神经网络.assets/one-hot.png)
 
-词袋模型（Bag of Words）：
+### 词袋模型（Bag of Words）
 
 -   使用单词频率表示数据
--   ⼤词汇量将导致 “维数灾难”
+-   大词汇量将导致 “维数灾难”
 -   丢失了单词的顺序信息
 
 ![bag-of-words](10循环神经网络.assets/bag-of-words.png)
 
-词嵌入（Word Embedding）：
+### 词嵌入（Word Embedding）
 
--   用⼀组浮点数向量来表示⼀个单词，也即将单词映射到一个连续的向量空间
+-   用一组浮点数向量来表示一个单词，也即将单词映射到一个连续的向量空间
 -   词嵌入是一个 **密集的低维向量**，与 one-hot 编码的 **高维稀疏向量** 形成对比
 -   词嵌入是通过训练得到的，可以学习到单词之间的语义关系
 
@@ -45,12 +45,12 @@ One-hot 编码：
 理想的词嵌入应该是：
 
 -   语义相似的单词在向量空间中距离较近，不相似的单词距离较远
--   特征向量维度低于词汇表大小，可以减少维数灾难，可以理解为用高级特征表示单词
--   允许进行语义操作，如向量相加和相减 `King − Man + Women = Queen`
+-   **特征向量维度低于词汇表大小**，可以减少维数灾难，可以理解为用高级特征表示单词
+-   允许进行 **语义操作**，如向量相加和相减 `King − Man + Women = Queen`
 
-    这代表词嵌⼊中的特征包含了诸如 “性别” 和 “位置” 等信息。
+    这代表词嵌入中的特征包含了诸如 “性别” 和 “位置” 等 **语义信息**。
 
-如何学习词嵌入：现有的算法通过阅读⼤量⽂本⽂档来学习词嵌⼊表，以发现其中的模式，这是⼀种自监督（self-supervised） 学习⽅法。
+如何学习词嵌入：现有的算法通过阅读大量文本文档来学习词嵌入表，以发现其中的模式，这是一种自监督（self-supervised） 学习方法。
 
 ## Word2Vec
 
@@ -58,12 +58,14 @@ Word2Vec 是 Google 在 2013 年提出的一种词嵌入模型，它通过训练
 
 Word2Vec 有两种模型：Skip-gram 和 CBOW（Continuous Bag of Words）。
 
--   Skip-gram：通过一个词预测它周围的词（上下文），最大化正确的上下文词的预测概率
--   CBOW：通过周围的词（上下文）预测一个中间的词，最大化正确的中间词的预测概率
+-   Skip-gram：通过一个词预测它周围的词（上下文），最大化正确的 **上下文词的预测概率**
+-   CBOW：通过周围的词（上下文）预测一个中间的词，最大化正确的 **中间词的预测概率**
 
-### 噪声对比估计 NCE
+### 噪声对比估计 NCE（Noise Contrastive Estimation）
 
 由于 Skip-Gram 有多个目标输出，所以使用 Sigmoid 函数而不是 Softmax。
+
+词汇表中的每个单词都被分为正样本和负样本，并且我们独立地对每个单词进行分类。
 
 > Softmax 函数通常用于多分类问题中，它会考虑所有可能的输出类别，并给出一个概率分布，这些概率加起来总和为 1。在词嵌入的场景下，如果使用 Softmax，你需要对词汇表中的每个词计算一个概率（也即存在依赖），**这在词汇表很大时会导致巨大的计算成本**。
 >
@@ -92,7 +94,7 @@ $$
 
 举例：
 
--   one-to-many：输入一张图片，输出一个描述
+-   one-to-many：输入一张图片，输出一段描述
 -   many-to-one：输入一段文本，输出一个情感标签
 -   many-to-many & seq2seq/async：输入一段文本，输出翻译后的另一段文本
 -   many-to-many & sync：输入一段音频，输出文本
@@ -108,10 +110,10 @@ RNN 在时间序列的每一个时间点上，都会有一个隐藏状态向量 
 通过添加隐状态，我们得以将信息传递到未来。
 ![rnn_arch](10循环神经网络.assets/rnn_arch.png)
 
-![rnn_arch](10循环神经网络.assets/rnn_arch.png)
+![rnn_arch](10循环神经网络.assets/rnn_arch.svg)
 
 $$
-\begin{array}{l}{{h_{t}=tanh\left(W_{h}x_{t}+U_{h}h_{t-1}+b_{h}\right)}}\\{{y_{t}=\sigma_{y}(W_{y}h_{t}+b_{y})}}\end{array}
+\begin{array}{l}{{h_{t}=\tanh\left(W_{h}x_{t}+U_{h}h_{t-1}+b_{h}\right)}}\\{{y_{t}=\sigma_{y}(W_{y}h_{t}+b_{y})}}\end{array}
 $$
 
 其中：
@@ -121,9 +123,9 @@ $$
 -   $y_t$ 是时间步 $t$ 的输出
 -   $W_h$、$U_h$、$b_h$ 是隐状态的参数
 -   $W_y$、$b_y$ 是输出的参数
--   $\sigma_y$ 是输出的激活函数，$\sigma_h$ 就是 $tanh$
+-   $\sigma_y$ 是输出的激活函数，$\sigma_h$ 就是 $\tanh$
 
-局限性：隐状态的信息会随着时间步的增加而衰减，这意味着 RNN 只能处理短序列，长序列的信息会被遗忘。也即很难维持较为长期的信息。（考虑一个值连续应用多次 $tanh$ 会发生什么）
+局限性：隐状态的信息会随着时间步的增加而衰减（随着时间步的增加，$h_{t-1}$ 中包含的早期信息会逐渐被新的输入 $x_t$ 所稀释），这意味着 RNN 只能处理短序列，长序列的信息会被遗忘。也即很难维持较为长期的信息。
 
 ## 长短期记忆网络（Long Short-Term Memory，LSTM）
 
@@ -160,7 +162,7 @@ $$
 随后，遗忘门的输出值 $f_t$ 会与前一时刻的细胞状态相乘，从而决定丢弃哪些信息：
 
 $$
-\boldsymbol{C_{t-1}} = \boldsymbol{f_t} \odot \boldsymbol{C_{t-1}}
+\boldsymbol{C_{t-1}'} = \boldsymbol{f_t} \odot \boldsymbol{C_{t-1}}
 $$
 
 其中：
@@ -169,43 +171,45 @@ $$
 
 #### 计算输入门（Input Gate）
 
-输入门分为两部分：一个输出向量，决定我们要把候选向量的哪些部分添加到细胞状态中；一个候选（信息）向量，决定我们要在细胞状态中存储那些新信息。
+输入门分为两部分：
+
+-   一个输出向量，决定我们要把 **候选向量的哪些部分** 添加到细胞状态中
+-   一个候选（信息）向量，决定我们要在细胞状态中存储那些新信息。
 
 ##### 计算输入门的输出向量
 
-在长短期记忆网络（LSTM）中，输入门的作用是控制当前输入和过去记忆的结合程度，而候选记忆（信息向量）则提供了可能添加到细胞状态的新信息。如果我们直接把输入门的输出加到记忆里，那么所有的输入都会不加选择地影响记忆状态，这样会使得网络缺乏选择性地忘记或保留信息的能力。
+在长短期记忆网络（LSTM）中，**输入门的作用是控制当前输入和过去记忆的结合程度**，而候选记忆（信息向量）则提供了可能添加到细胞状态的新信息。如果我们直接把输入门的输出加到记忆里，那么所有的输入都会不加选择地影响记忆状态，这样会使得网络缺乏选择性地忘记或保留信息的能力。
 
-因而我们需要一个输出向量决定我们要在细胞状态中存储候选向量的那些部分。其通过如下公式计算：
+因而我们需要一个输出向量决定我们要往细胞状态中存储候选向量的那些部分。其通过如下公式计算：
 
 $$
-i_t = sigmoid([h_{t-1}, x_t] W_i + b_i)
+i_t = sigmoid([h_{t-1}, x_t] \boldsymbol{W_i} + b_i)
 $$
 
 其中：
 
 -   $i_t$: 输入门（input gate）的输出值
--   $W_i,b_i$: 输入门的权重矩阵、偏置项
+-   $\boldsymbol{W_i},b_i$: 输入门的权重矩阵、偏置项
 
 #### 计算输入门的信息向量（Information Vector）
 
 信息向量包含了候选信息，这些信息可能（注意这里说的是可能，也就是后面要经过输出向量的点乘作用）会被添加到细胞状态中。它的计算方式为：
 
 $$
-\boldsymbol{C_t} = tanh([h_{t-1}, x_t] \boldsymbol{W_C} + b_C)
+\tilde{\boldsymbol{C_t}} = \tanh([h_{t-1}, x_t] \boldsymbol{W_C} + b_C)
 $$
 
 其中：
 
--   $\boldsymbol{C_t}$: 当前时刻的信息向量（information vector）
+-   $\tilde{\boldsymbol{C_t}}$: 当前时刻的信息向量（information vector）
 -   $\boldsymbol{W_C},b_C$: 信息向量的权重矩阵、偏置项
--   $\boldsymbol{C_{t-1}}$: 前一时刻的细胞状态
 
 #### 计算新的细胞状态
 
 新的细胞状态是通过结合遗忘门的结果（决定丢弃哪些信息）和输入门的结果（决定添加哪些新信息）来更新的：
 
 $$
-\boldsymbol{C_t} = \boldsymbol{f_t} \cdot \boldsymbol{C_{t-1}} + \boldsymbol{i_t} \cdot \boldsymbol{C_t}
+\boldsymbol{C_t} = \boldsymbol{f_t} \odot \boldsymbol{C_{t-1}'} + \boldsymbol{i_t} \odot \tilde{\boldsymbol{C_t}}
 $$
 
 #### 计算输出门（Output Gate）和新的隐藏状态
@@ -219,7 +223,7 @@ $$
 新的隐藏状态由 **输出门和新的细胞状态** 决定：
 
 $$
-h_t = o_t \odot tanh(\boldsymbol{C_t})
+h_t = o_t \odot \tanh(\boldsymbol{C_t})
 $$
 
 其中：
@@ -232,11 +236,15 @@ $$
 
 我们是否可以用 ReLU 来替换门控函数中的 Sigmoid 函数？
 
-> 不行，因为 ReLU 函数的输出范围是 $[0, +\infty)$，而门控函数的输出范围是 $[0, 1]$（更符合门控单元的定义），这样会导致信息流失。不过也有一些变种的 LSTM 使用了 ReLU 来替换 Sigmoid 函数，如 GRU。
+> 不行，因为 ReLU 函数的输出范围是 $[0, +\infty)$ ，而门控函数的输出范围是 $[0, 1]$ （更符合门控单元的定义），这样会导致信息流失。
+>
+> 不过也有一些变种的 LSTM 使用了 ReLU 来替换 Sigmoid 函数，如 GRU。
+>
+> 这里还要注意，**门控都是 Sigmoid 函数**。
 
-当向向量输⼊信息时，为什么我们使用 tanh ⽽不是 Sigmoid？
+当向向量输入信息时，为什么我们使用 $\tanh$ 而不是 Sigmoid？
 
-> tanh 函数的输出范围是 $(-1, 1)$，而 Sigmoid 函数的输出范围是 $[0, 1]$，这样可以使得信息的变化范围更大，反向传播时更容易传递。
+> $\tanh$ 函数的输出范围是 $(-1, 1)$，而 Sigmoid 函数的输出范围是 $[0, 1]$，这样可以使得信息的变化范围更大，反向传播时更容易传递。
 
 ### LSTM 的变体
 
@@ -258,10 +266,14 @@ $$
 
 ![sync_many_to_many_2](10循环神经网络.assets/sync_many_to_many_2.png)
 
+注意这里，实际循环过程中一直给的是正确的下一词，而不是预测的下一词。
+
 ![async_many_to_many](10循环神经网络.assets/async_many_to_many.png)
 
 ![async_many_to_many_2](10循环神经网络.assets/async_many_to_many_2.png)
 
 ## Credit
+
+[D2L / RNN](https://zh.d2l.ai/chapter_recurrent-neural-networks/rnn.html)
 
 [D2L / LSTM](https://zh.d2l.ai/chapter_recurrent-modern/lstm.html)
