--- a/Note/03机器学习介绍与线性模型.md
+++ b/Note/03机器学习介绍与线性模型.md
@@ -6,6 +6,86 @@
   blog: <a href="https://arthals.ink">Arthals' ink</a>
 </center>
 
+## 机器学习
+
+机器学习，指通过算法的设计与分析，使得：
+
+-   模型的 **表现** 得到提升
+-   在某些 **任务** 上
+-   基于 **经验**
+
+### 机器学习的任务
+
+1. **有监督学习**：这种方式需要提前给模型提供 “正确答案”，让模型在学习过程中有明确的参照。比如：
+
+    - **分类问题**：判断输入数据属于哪个类别，例如判断一封邮件是不是垃圾邮件。
+    - **回归问题**：预测一个连续值，例如预测房屋的价格。
+
+2. **无监督学习**：模型在没有 “正确答案” 的情况下自我学习，它会尝试理解数据的结构。
+
+    - **聚类**：将数据分组，组内相似度高，组间相似度低，例如将顾客分为不同的群体。
+    - **密度估计**：估计数据生成的概率分布，例如在数据中找出异常点。
+    - **降维**：减少数据的复杂性，同时保留重要特征，例如用于数据可视化。
+
+3. **半监督学习**：结合了有监督和无监督学习，使用大量未标记数据和少量标记数据进行学习。
+
+4. **弱监督学习**：标记数据不完全、不确切或不可靠，但仍旨在通过这些不完美的标记来进行学习。
+
+5. **强化学习**：模型通过与环境的交互来学习，它试图找出在给定情况下的最佳动作，以最大化所获得的奖励。
+
+### 机器学习的经验
+
+训练数据 vs 测试数据
+
+一个好的机器学习算法
+
+-   不会过拟合 (overfit)
+-   训练数据可以泛化（generalize）到测试数据
+
+### 机器学习的表现
+
+表现的衡量方法：从一个随机测试数据 $X$，衡量真实标签 $Y$ 和预测 $f(X)$ 之间的接近程度
+
+#### 二元分类（Binary Classification）
+
+二元分类是一个简单的分类问题，只有两个类别的结果。损失函数为 0/1 损失，即如果预测正确，损失为 0；预测错误，损失为 1。
+
+**二元分类的 0/1 损失函数**
+
+$$
+\text{loss}(Y, f(X)) = 1\{f(X) \neq Y\}
+$$
+
+其中，$1\{\}$ 是指示函数，当 $f(X)$（预测值）不等于 $Y$（真实值）时，结果为 1，表示有损失；否则结果为 0，表示没有损失。
+
+#### 回归（Regression）
+
+在回归任务中，我们预测 **连续的输出值**。损失函数为平方损失，即预测值与真实值之差的平方。
+
+**回归的平方损失函数**
+
+$$
+\text{loss}(Y, f(X)) = (f(X) - Y)^2
+$$
+
+这里 $(f(X) - Y)^2$ 表示预测值 $f(X)$ 与实际值 $Y$ 之间差的平方。这个值越小，表示预测越准确。
+
+#### 密度估计（Density Estimation）
+
+密度估计是 **估计输入数据概率分布** 的任务。损失函数为负对数似然损失，这里衡量的是模型对真实分布的拟合程度。
+
+**密度估计的负对数似然损失函数**
+
+$$
+\text{loss}(f(X)) = -\log(P_f(X))
+$$
+
+其中，$P_f(X)$ 是模型预测的数据点 $X$ 的概率。负对数似然损失函数衡量的是模型对数据生成概率的估计与实际分布的拟合程度。这个值越小，表示模型的估计越接近真实分布。
+
+#### 机器学习的理想目标
+
+机器学习的目标是找到一个预测规则 $f$，它可以最小化损失函数的期望值。这里提到最小化的是联合分布 $P_{XY}$​ 下的损失期望，实际中我们通常通过样本数据来近似这个期望。
+
 ## 线性模型
 
 线性模型：线性模型就是要学习特征 $X$ 的一种线性组合来进行预测，进行运算 $y = wX + b$，其中 $w$ 是 $X$ 的权重，$b$ 是偏置，$y$ 是预测值。我们希望通过学习得到最优的 $w$ 和 $b$，使得预测值 $y$ 与真实值 $y_{GT}$ 的误差最小。
@@ -30,7 +110,7 @@ $$
 
 这也被称为 Empirical mean（经验均值）。
 
-其中，$n$ 是数据的数量，$x_i$ 是第 i 个数据的全部特征，$y_i$ 是第 i 个数据的真实值，$f(x_i)$ 是第 i 个数据的预测值。
+其中，$n$ 是数据的数量，$x_i$ 是第 $i$ 个数据的全部特征，$y_i$ 是第 $i$ 个数据的真实值，$f(x_i)$ 是第 $i$ 个数据的预测值。
 
 根据大数定理，当数据量足够大时，经验均值会趋近于期望，也就是：
 
@@ -91,7 +171,7 @@ $$
 \hat{\beta}=( \mathbf{A}^{\mathrm{T}} \mathbf{A} )^{-1} \mathbf{A}^{\mathrm{T}} \mathbf{Y}
 $$
 
-但是，很多情况下，$\mathbf{A}$ 并不可逆，比如 $n < p$ 时，我们可以证明它一定不可逆。而且即使 $\mathbf{A}$ 可逆，当它的维度很大时，计算也是很昂贵的。
+但是，很多情况下，$\mathbf{A}$ 并不可逆，比如 $n < p$ 时，我们可以证明它一定不可逆。而且即使 $\mathbf{A}$ 可逆（此时要求样本个数 $n$ 要大于等于待估参数量 $p$，包含截距项），当它的维度很大时，计算也是很昂贵的。
 
 所以，我们可以通过梯度下降法来求解最优的 $\beta$。
 
@@ -104,7 +184,7 @@ $$
 $$
 \begin{aligned}
 &\max_{\beta}p(D|\beta)p(\beta)=\max_{\beta}\log p(D|\beta)+\log p(\beta)\\\\
-&\hat{\beta}_{\mathrm{MAP}}=\arg\max_{\beta}\underbrace{\log p\left(\{(X_i,Y_i)\}_{i=1}^n\mid\beta,\sigma^2\right)}_{\log\text{likelihood}} + \underbrace { l o g p \left ( \beta \right )}_{\log\text{prior}}
+&\hat{\beta}_{\mathrm{MAP}}=\arg\max_{\beta}\underbrace{\log p\left(\{(X_i,Y_i)\}_{i=1}^n\mid\beta,\sigma^2\right)}_{\log\text{likelihood}} + \underbrace { \log p \left ( \beta \right )}_{\log\text{prior}}
 \end{aligned}
 $$
 
@@ -168,7 +248,7 @@ $$
 当我们对于 $\beta$ 的先验假设不一样时，这个惩罚项（正则项）也会不一样。但大致原理不变，于是我们对这个形式加以推广，得到了类似如下的公式：
 
 $$
-min_\beta(\mathbf{A}\beta-\mathbf{Y})^T(\mathbf{A}\beta-\mathbf{Y})+\lambda\mathrm{pen}(\beta)=minJ(\beta)+\lambda\mathrm{pen}(\beta)
+\min_\beta(\mathbf{A}\beta-\mathbf{Y})^T(\mathbf{A}\beta-\mathbf{Y})+\lambda\mathrm{pen}(\beta)=\min J(\beta)+\lambda\mathrm{pen}(\beta)
 $$
 
 其中，$J(\beta)$ 是我们的损失函数，$\mathrm{pen}(\beta)$ 是惩罚项。
@@ -180,8 +260,10 @@ $$
 
 这两个惩罚项的解，具有如下特征：
 
--   **L1 岭回归的正则化项**：$\lambda \sum_{j=1}^{p} \beta_j^2$，这是一个 L2 范数，它对大的系数施加更大的惩罚，导致系数平滑地趋近于零。有些 $w$ 更小。
--   **L2 套索回归的正则化项**：$\lambda \sum_{j=1}^{p} |\beta_j|$，这是一个 L1 范数，它对所有系数施加相同的惩罚，这会导致一些系数直接为零，从而产生一个稀疏解。非零 $w$ 更少。
+-   **L1 岭回归的正则化项**：$\lambda \sum_{j=1}^{p} \beta_j^2$，这是一个 L2 范数，它对大的系数施加更大的惩罚，导致系数平滑地趋近于零。**有些 $w$ 更小**。
+-   **L2 套索回归的正则化项**：$\lambda \sum_{j=1}^{p} |\beta_j|$，这是一个 L1 范数，它对所有系数施加相同的惩罚，这会导致一些系数直接为零，从而产生一个稀疏解。**非零 $w$​ 更少**。
+
+简而言之：**岭回归无法剔除变量，套索回归的优良性质是能产生稀疏性，可以将一些不重要的回归系数缩减为 0，达到剔除变量的目的。** [^2]
 
 最终，我们得到广义的线性模型，我们可以考虑任意一种单调可微的函数 $g(.)$：
 
@@ -198,6 +280,7 @@ $$
 ## Reference
 
 [^1]: [L1，L2 正则化的理解](https://hellojialee.github.io/2020/01/28/L1%E5%92%8CL2%E6%AD%A3%E5%88%99%E5%8C%96%E7%9A%84%E7%90%86%E8%A7%A3/)
+[^2]: [SlimSRecovery / 线性回归模型估计](https://zhuanlan.zhihu.com/p/194447481)
 
 关于最大化高斯分布的后验概率等价于最小化二阶范数的具体推导，还有一个由 GPT4 生成的推导过程：
 
@@ -237,4 +320,4 @@ $$
 > J'(w) = J(w) + \alpha w^2
 > $$
 >
-> 这显示了在高斯分布下 $\log P(w)$ 的效果等价于在代价函数中增加 $L2$ 正则项。这种正则化有时也被称为权重衰减，它鼓励模型学习更小的权重，从而可以提高模型的泛化能力，防止过拟合。
+> 这显示了在高斯分布下 $\log P(w)$ 的效果等价于在代价函数中增加 $L2$​ 正则项。这种正则化有时也被称为权重衰减，它鼓励模型学习更小的权重，从而可以提高模型的泛化能力，防止过拟合。
