--- a/Note/05神经网络基础.md
+++ b/Note/05神经网络基础.md
@@ -12,7 +12,7 @@
 
 神经元模型是神经网络的基本单元，它接收输入信号，对输入信号进行 **加权求和** ，权重 / 参数（weight/parameter）的绝对值越大，则代表对应的输入 $x$ 对输出影响越大，然后通过激活函数处理，最后输出结果。
 
-基于向量相乘的实现，分为列格式和行格式：
+基于向量相乘的实现，分为列格式和行格式。
 
 ### 列格式
 
@@ -57,10 +57,10 @@ $$
     -   映射关系：$(-\infty,+\infty) \rightarrow (0,1)$，输出值在 0 到 1 之间，用以表示概率
 -   Tanh 函数
     -   公式：$f(x)=\frac{e^x-e^{-x}}{e^x+e^{-x}}=\frac{2}{1+e^{-2x}}$
-    -   映射关系：$(-\infty,+\infty) \rightarrow (-1,1)$，输出值在 -1 到 1 之间，常用于回归任务
+    -   映射关系：$(-\infty,+\infty) \rightarrow (-1,1)$，输出值在 -1 到 1 之间，常用于 **回归任务**
 -   ReLU 函数
     -   公式：$f(x)=\max(0,x)$
-    -   映射关系：$(-\infty,+\infty) \rightarrow (0,+\infty)$，最常用的分类函数，可以用于特征提取、简化网络优化（缓解梯度消失问题、偏导数好计算）
+    -   映射关系：$(-\infty,+\infty) \rightarrow (0,+\infty)$，最常用的分类函数，可以用于特征提取、 **简化网络优化** （缓解梯度消失问题、偏导数好计算）
 -   Leaky ReLU 函数
     -   公式：$f(x)=\max(\alpha x,x)$
     -   映射关系：$(-\infty,+\infty) \rightarrow (-\infty,+\infty)$，解决 ReLU 函数中负数部分输出为 0 的问题，其中的 $\alpha$ 是一个小的常数，如 0.01，在 Parametric ReLU 中，这个 $\alpha$ 是一个可学习的参数
@@ -70,14 +70,13 @@ $$
 
 ## 多层感知器（Multi-Layer Perceptron, MLP）
 
-多层感知器是一种前馈神经网络，它由 **输入层** 、 **隐藏层** 和 **输出层** 组成。
+多层感知器是一种 **前馈神经网络**，它由 **输入层** 、 **隐藏层** 和 **输出层** 组成。
 
 相较于单层感知器的线性决策边界，多层感知器通过将多个单层感知器叠加，后一个层将原有层的输出值当做特征值来学习，也就是 “在原有特征的基础上，再次进行特征提取（变换）”，从而具有更好的表达能力。这能更好的解决现实中更复杂的问题。
 
 ![mlp](./05神经网络基础.assets/mlp.png)
 
 **注意，$a$ 代表的是激活函数的输出，之前的 $z$ 代表的是加权求和的结果。$a = f(z)$**
-
 $$
 a_k^l
 $$
@@ -93,7 +92,7 @@ $$
 
 ## 损失函数
 
-损失函数（loss function）：用来量化网络预测的输出（predicted output）和给定训练数据输出（ground truth）之间的 **误差 (error，也称 loss value)** 。
+损失函数（loss function）：用来量化网络 **预测的输出（predicted output）** 和 **给定训练数据输出（ground truth）** 之间的 **误差 (error，也称 loss value)** 。
 
 损失函数用来设定优化神经网络参数（如权重、偏置）的目标。
 
@@ -113,7 +112,28 @@ $$
 
 这里的 $P(Y=y_i|X=x_i)$ 是指在给定输入 $x_i$ 的情况下，输出 $y_i$ 的概率。这个概率是由神经网络给出的，也就是 $P(Y=y_i|X=x_i)=f(x_i)$，其中 $f$ 是神经网络的输出函数。
 
-### 回归问题：均方误差损失函数（mean squared error loss function）
+
+### 分类问题：交叉熵损失函数（cross-entropy loss function）
+
+公式是：
+
+$$
+\begin{aligned}
+\mathcal{L}&=-\sum_{k=1}^K y_k\log(a_k)\\
+\mathcal{L}&=-\frac{1}{M}\sum_{m=1}^M\sum_{k=1}^K y_k^m\log(a_k^m)
+\end{aligned}
+$$
+
+这里：
+
+-   $K$ 是类别的总数
+-   $y_k$ 是一个独热编码向量，其中只有对应真实类别的那一项为 1，其余为 0
+-   $a_k$ 是神经网络输出的概率预测，对应于类别 $k$
+-   上标 $m$ 表示第 $m$ 个样本。
+
+第一个式子为单个样本的损失函数，第二个式子为多个样本的损失函数。
+
+#### 逻辑回归问题的损失函数
 
 $$
 \mathcal{L} = y\log(a) + (1 - y)\log(1 - a)\\
@@ -136,7 +156,7 @@ $$
 >
 > 逻辑回归的损失函数是从最大似然估计（Maximum Likelihood Estimation, MLE）推导而来的。
 >
-> 给定一组数据，MLE 的目标是找到模型参数（在逻辑回归中是权重 $w$ 和偏差 $b$​），使得观察到的数据出现的概率（似然）最大。
+> 给定一组数据，MLE 的目标是找到模型参数（在逻辑回归中是权重 $w$ 和偏差 $b$），使得观察到的数据出现的概率（似然）最大。
 >
 > 对于逻辑回归，似然函数可以写为：
 >
@@ -166,38 +186,25 @@ $$
 >
 > 这就是逻辑回归中常用的损失函数，也称为对数损失（Log Loss）或交叉熵损失（Cross-Entropy Loss）。
 
-### 分类问题：交叉熵损失函数（cross-entropy loss function）
+### 回归问题：均方误差损失函数（mean squared error loss function，MSE）
 
-公式是：
-
+MSE 是 $L_{2}$ 范数，往往用来衡量网络输出值 $a$ 和训练数据输出值 $y$ 的差别。
 $$
-\begin{aligned}
-\mathcal{L}&=-\sum_{k=1}^K y_k\log(a_k)\\
-\mathcal{L}&=-\frac{1}{M}\sum_{m=1}^M\sum_{k=1}^K y_k^m\log(a_k^m)
-\end{aligned}
+\text{loss}(Y, f(X)) = (Y - f(X))^2
 $$
 
-这里：
-
--   $K$ 是类别的总数
--   $y_k$ 是一个独热编码向量，其中只有对应真实类别的那一项为 1，其余为 0
--   $a_k$ 是神经网络输出的概率预测，对应于类别 $k$
--   上标 $m$ 表示第 $m$ 个样本。
-
-第一个式子为单个样本的损失函数，第二个式子为多个样本的损失函数。
-
-## L 范数
+#### L 范数
 
 $$
 ||x||_L = \left( \sum_{i=1}^n |x_i|^L \right)^{\frac{1}{L}}
 $$
 
 -   $L=1$ 时，称为 L1 范数，MAE（Mean Absolute Error，平均绝对误差）。用于衡量两个向量之前差别的大小
--   $L=2$ 时，称为 L2 范数，MSE（Mean Squared Error，均方误差）。⽤来衡量⽹络输出值 $a$ 和训练数据输出值 $y$ 的差别（MAE 也可以，区别在于 L2 范数对异常值更敏感）
+-   $L=2$ 时，称为 L2 范数，MSE（Mean Squared Error，均方误差）。用来衡量网络输出值 $a$ 和训练数据输出值 $y$ 的差别（MAE 也可以，区别在于 L2 范数对异常值更敏感）
 
 ## 优化
 
-目的：给定网络 $f(x;\theta)$ 和损失函数 $L$ ，以获得好的参数 $\theta$，最小化损失函数 $\mathcal{L}$。
+目的：给定网络 $f(x;\theta)$ 和损失函数 $\mathcal{L}$ ，以获得好的参数 $\theta$，最小化损失函数 $\mathcal{L}$。
 
 最常用的优化方法是梯度下降（gradient descent）。梯度下降的思想是通过不断迭代来更新参数，使得损失函数最小化。
 
@@ -247,7 +254,7 @@ $$
 \end{aligned}
 $$
 
-在 Sigmoid 函数的导数中，当 $x$ 趋近于正无穷或负无穷时，$\sigma'(x)$ 趋近于 0。这就是梯度消失的原因。当梯度消失时，网络的训练将变得非常困难，因为梯度会在反向传播的过程中经过这些层时变得非常小，导致网络无法学习到有效的参数。
+在 Sigmoid 函数的导数中，当 $x$ 趋近于正无穷或负无穷时，$\sigma'(x)$ 趋近于 0。这就是梯度消失的原因。**当梯度消失时，网络的训练将变得非常困难**，因为梯度会在反向传播的过程中经过这些层时变得非常小，导致网络无法学习到有效的参数。
 
 为了解决这个问题，我们可以使用 ReLU 函数，它的导数在 $x>0$ 时为 1，这样可以避免梯度消失的问题。
 
@@ -301,7 +308,10 @@ $$
 
 ### 学习率调度
 
-学习率是梯度下降算法中的一个重要超参数，它决定了参数更新的速度。学习率太大会导致参数更新过快，从而错过最优解；学习率太小会导致参数更新过慢，从而训练时间过长。
+学习率是梯度下降算法中的一个重要超参数，它决定了参数更新的速度。
+
+- 学习率太大会导致参数更新过快，从而错过最优解
+- 学习率太小会导致参数更新过慢，从而训练时间过长
 
 为了解决这个问题，我们可以使用学习率调度（learning rate schedule）来动态调整学习率。学习率调度可以根据训练过程中的不同阶段来调整学习率，例如每隔一定的 epoch 或当损失函数不再下降时。
 
